# K-Means-CUDA

./: .gitignore  CMakeLists.txt  README.md  main.cu
common/: CentroidsComputation.cu  CentroidsComputation.h  CommandLineArguments.h  CommandLineArgumentsParser.cu  CommandLineArgumentsParser.h  Dataset.cu  Dataset.h  Utils.cu  Utils.h
cpu/: KMeansCPU.cu  KMeansCPU.h  StandardizationCPU.cu  StandardizationCPU.h  StatisticsCPU.cu  StatisticsCPU.h
gpu/: CommonKernels.cu  CommonKernels.h  KMeansGPU.cu  KMeansGPU.h  StandardizationGPU.cu  StandardizationGPU.h  StatisticsGPU.h
python_scripts/: generate_testing_dataset.py  plot_clustering_results.py
